--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </footer>
 
 
-    <!-- Script -->
+    <!-- Scripts -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -297,14 +297,6 @@
         crossorigin="anonymous"></script>
     <script src="assets/js/scroll.js"></script>
 
-
-    <!-- Código jQuery (Tooltip) -->
-    <script 
-        type="text/javascript">
-        $(function () {
-            $('[data-bs-toggle="tooltip"]').tooltip();
-        }); 
-    </script>
 
 </body>
 
