Cambio distribucion tarjetas

--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
     <!-- Destacados - 4 CARDS -->
     <!-- Bootstrap: Se usa contenedor y Cards para el manejo de destacados -->
 
-    <main id="section-03" class="container">
+    <main id="section-03" class="container p-2">
         <article class="text-center p-3 mt-4">
             <h3>DESTACADOS</h3>
             <hr>
         </article>
-        <section class="container p-3">
-            <div class="row row-cols-1 row-cols-sm-4">
+        <section class="container-fluid">
+            <div class="row">
 
-                <div class="col col-sm-3 p-2">
+                <div class="col-lg-3 col-md-6 ">
                     <div class="card h-100">
                         <img src="assets/img/card1.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
@@ -173,7 +173,7 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-3 p-2">
+                <div class="col-lg-3 col-md-6 ">
                     <div class="card h-100">
                         <img src="assets/img/card2.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-3 p-2">
+                <div class="col-lg-3 col-md-6 ">
                     <div class="card h-100">
                         <img src="assets/img/card3.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
@@ -197,7 +197,7 @@
                     </div>
                 </div>
 
-                <div class="col col-sm-3 p-2">
+                <div class="col-lg-3 col-md-6 ">
                     <div class="card h-100">
                         <img src="assets/img/card4.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
