--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
     <!-- Footer links redes sociales -->
     <!-- Boostrap, modelo de footer con contenedor y columnas -->
 
-    <footer>
-        <div class="container text-light bg-info">
+    <footer class="container-fluid card-footer">
+        <div class="text-light bg-info">
 
             <div class="row text-center p-3 mt-4">
                 <div class="col">
