--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Barra de navegacion Bootstrap tipo NAV, recurso utilizado "Sticky-top"-->
     <!-- Js smooth scroll 'a'  -->
 
-    <div id="navegador" class="container-fluid sticky-top">
+    <div id="navegador" class="sticky-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
 
@@ -38,8 +38,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <div class="collapse navbar-collapse bg-black" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0  ">
                         <li class="nav-item">
                             <a class="nav-link active text-light" aria-current="page" href="#section-01">Inicio</a>
                         </li>
@@ -58,7 +58,7 @@
         </nav>
     </div>
 
-
+    
     <!-- Carousel - imagenes destacadas -->
     <!-- Js Bootstrap, carrusel -->
 
@@ -161,7 +161,7 @@
         <section class="container-fluid">
             <div class="row">
 
-                <div class="col-lg-3 col-md-6 ">
+                <div class="col-lg-3 col-md-6 p-3">
                     <div class="card h-100">
                         <img src="assets/img/card1.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
@@ -173,7 +173,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 ">
+                <div class="col-lg-3 col-md-6 p-3">
                     <div class="card h-100">
                         <img src="assets/img/card2.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 ">
+                <div class="col-lg-3 col-md-6 p-3">
                     <div class="card h-100">
                         <img src="assets/img/card3.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
@@ -197,7 +197,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 ">
+                <div class="col-lg-3 col-md-6 p-3">
                     <div class="card h-100">
                         <img src="assets/img/card4.jpg" class="card-img card-imagen" alt="...">
                         <div class="card-body">
